force-app/main/default/objects/copadoQuality__Functional_Review__c/copadoQuality__Functional_Review__c.object-meta.xml
<CustomObject>
    <label>Functional Review</label>
    <nameField>
        <label>Functional Review Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functional Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>