force-app/main/default/objects/copadoQuality__Functional_Review__c/fields/copadoQuality__Add_https_Prefix__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Add_https_Prefix__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls automatic addition of HTTPS protocol to Target Review URL</description>
    <inlineHelpText>Select this checkbox to automatically add “https://” to the Target Review URL.
Disable, if you want to use a different protocol</inlineHelpText>
    <label>Add https Prefix</label>
    <type>Checkbox</type>
</CustomField>