force-app/main/default/objects/copadoQuality__Functional_Review__c/fields/copadoQuality__Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Config_JSON__c</fullName>
    <label>Config JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>