force-app/main/default/objects/copadoQuality__Functional_Review__c/fields/copadoQuality__Description__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Description__c</fullName>
    <inlineHelpText>Provide an outline about e.g. which parts of your application it should focus on, or where to find further information. Include links to documentation and videos to enable your reviewers.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>