force-app/main/default/objects/copadoQuality__Functional_Review__c/fields/copadoQuality__Epic__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Epic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specify the Epic to which this review might be related.</inlineHelpText>
    <label>Epic</label>
    <referenceTo>copado__Epic__c</referenceTo>
    <relationshipLabel>Functional Reviews</relationshipLabel>
    <relationshipName>Functional_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>