force-app/main/default/objects/copadoQuality__Functional_Review__c/fields/copadoQuality__Extension_Configuration__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Extension_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extension Configuration</label>
    <referenceTo>copado__ExtensionConfiguration__c</referenceTo>
    <relationshipLabel>Functional Reviews</relationshipLabel>
    <relationshipName>Functional_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>