force-app/main/default/objects/copadoQuality__Functional_Review__c/fields/copadoQuality__Feature__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use this to specify if the review is for a specific Feature.</inlineHelpText>
    <label>Feature</label>
    <referenceTo>copado__Application_Feature__c</referenceTo>
    <relationshipLabel>Functional Reviews</relationshipLabel>
    <relationshipName>Functional_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>