force-app/main/default/objects/copadoQuality__Functional_Review__c/fields/copadoQuality__Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Planned_Date__c</fullName>
    <inlineHelpText>Optional: Date when the review should happen.</inlineHelpText>
    <label>Planned Date</label>
    <type>DateTime</type>
</CustomField>