force-app/main/default/objects/copadoQuality__Functional_Review__c/fields/copadoQuality__Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Review_Outcome__c</fullName>
    <inlineHelpText>Provide a summary of the review. Feel free to link to further tracking sources like Spreadsheets or quip documents. This can be partially auto-generated with comments from the individual reviews or with AI generated summaries.</inlineHelpText>
    <label>Review Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>