force-app/main/default/objects/copadoQuality__Functional_Review__c/fields/copadoQuality__Review_Target_URL__c.field-meta.xml
<CustomField>
    <fullName>copadoQuality__Review_Target_URL__c</fullName>
    <label>Review Target URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>