force-app/main/default/objects/copadoQuality__Functional_Review__c/validationRules/copadoQuality__Protocol_Control.validationRule-meta.xml
<ValidationRule>
    <fullName>copadoQuality__Protocol_Control</fullName>
    <active>false</active>
    <errorConditionFormula>If( AND(Not(IsBlank(copadoQuality__Review_Target_URL__c)),LOWER(LEFT(copadoQuality__Review_Target_URL__c, 4))!= &apos;http&apos;), true,false )</errorConditionFormula>
    <errorMessage>Target url has to start with a protocol.(exp: https://)</errorMessage>
</ValidationRule>