force-app/main/default/objects/copadoQuality__Functional_Review__c/listViews/copadoQuality__All.listView-meta.xml
<ListView>
    <fullName>copadoQuality__All</fullName>
    <columns>NAME</columns>
    <columns>copadoQuality__Planned_Date__c</columns>
    <columns>copadoQuality__Review_Environment__c</columns>
    <columns>copadoQuality__Epic__c</columns>
    <columns>copadoQuality__Feature__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>